# poolctl

./: .gitignore  AGENTS.md  README.md  SKILL.md  discover.py  justfile  poolctl.py  pyproject.toml  requirements.txt  status.py
poolctl/: __init__.py  cli.py  config.py  control.py  gateway.py  protocol.py  render.py
tests/: test_config.py  test_control.py  test_render.py
